--- a/yml/deployment.yaml
+++ b/yml/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: postgres
 spec:
-  replicas: 0
+  replicas: 1
   selector:
     matchLabels:
       app: postgres
@@ -12,22 +12,19 @@ spec:
       labels:
         app: postgres
     spec:
-      restartPolicy: Always
-      volumes:
-        - name: postgres-pv-storage
-          persistentVolumeClaim:
-            claimName: postgres-pv-claim
       containers:
         - name: postgres
-          image: postgres:12
-          volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: postgres-pv
-              readOnly: true
+          image: postgres:10.4
+          imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 5432
           envFrom:
-            - secretRef:
-                name: postgres-secret
             - configMapRef:
-                name: postgres-configmap
+                name: postgres-config
+          volumeMounts:
+            - mountPath: /var/lib/postgresql/data
+              name: postgredb
+      volumes:
+        - name: postgredb
+          persistentVolumeClaim:
+            claimName: postgres-pv-claim
