--- a/yml/deployment.yaml
+++ b/yml/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:10.4
+          image: our_postgres_db:latest
           imagePullPolicy: "IfNotPresent"
           ports:
             - containerPort: 5432
