--- a/yaml/3-volumes.yaml
+++ b/yaml/3-volumes.yaml
@@ -1,30 +1,30 @@
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: postgres-pv-volume
+  name: postgres-pv
   namespace: ns-storage
   labels:
     type: local
-    app: postgres
 spec:
   storageClassName: manual
   capacity:
-    storage: 5Gi
+    storage: 100M
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   hostPath:
     path: "/mnt/data"
 ---
-kind: PersistentVolumeClaim
 apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pv-claim
   labels:
     app: postgres
+  name: postgres-pv-claim
+  namespace: ns-storage
 spec:
   storageClassName: manual
   accessModes:
-    - ReadWriteMany
+  - ReadWriteOnce
   resources:
     requests:
-      storage: 5Gi
+      storage: 100M
