--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,7 +1,6 @@
 FROM library/postgres
 
-ENV POSTGRES_USER user
+ENV POSTGRES_USER postgres
 ENV POSTGRES_PASSWORD docker
-ENV POSTGRES_DB init
 
 COPY init.sql /docker-entrypoint-initdb.d/
